--- a/TechJam/MainPage.xaml
+++ b/TechJam/MainPage.xaml
@@ -14,6 +14,7 @@
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Name="ProgressBarBorder" Margin="10,0,10,0" Height="50" BorderBrush="Red" BorderThickness="2">
             <Rectangle Height="50" Name="ProgressBarColor" Fill="Red" Width="0"></Rectangle>
+            <TextBlock VerticalAlignment="Center" FontSize="32" FontWeight="Bold" Foreground="White" HorizontalAlignment="Center" Name="ProgressText"></TextBlock>
         </Grid>
         <TextBlock Grid.Row="1" TextAlignment="Center" VerticalAlignment="Center" Name="showTxt" FontSize="230" TextWrapping="Wrap"></TextBlock>
     </Grid>
